# rse-panimg

./: .gitignore  .pre-commit-config.yaml  HISTORY.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml  release.yml
panimg/: __init__.py  cli.py  exceptions.py  models.py  panimg.py  settings.py  types.py
panimg/contrib/oct_converter/image_types/: __init__.py  fundus.py  oct.py
panimg/contrib/oct_converter/readers/: __init__.py  dcm.py  e2e.py  fda.py  fds.py  img.py
panimg/contrib/wsi_dcm_to_tiff/: dcm_to_tiff.py
panimg/contrib/wsi_isyntax_to_tiff/: isyntax_to_tiff.py
panimg/image_builders/: __init__.py  dicom.py  fallback.py  metaio_mhd_mha.py  metaio_nifti.py  metaio_nrrd.py  metaio_utils.py  nifti.py  nrrd.py  oct.py  tiff.py  utils.py
panimg/post_processors/: __init__.py  mha_pixel_range.py  sitk_pixel_range.py  tiff_to_dzi.py
tests/: __init__.py  conftest.py  test_background_tasks.py  test_cli.py  test_dcm_wsi.py  test_default_image_builders.py  test_dicom.py  test_fallback.py  test_isyntax_wsi.py  test_mhd.py  test_models.py  test_nifti.py  test_nrrd.py  test_oct.py  test_panimg.py  test_post_processors.py  test_tiff.py  test_tiff_to_dzi.py  test_utils.py  test_wsi.py
tests/resources/: .gitignore  image10x11x12x13-extra-stuff.mhd  image10x11x12x13.mha  image10x11x12x13.mhd  image10x11x12x13.zraw  image3x4-extra-stuff.mhd  image4x4x4x4x4.mha  image_min10_max10.mha  xray.dcm
tests/resources/channels/: 5_1_1_1_invalid.mha
tests/resources/dicom_2d/: cxr.dcm  xray.dcm
tests/resources/dicom_4d/: 1.dcm  10.dcm  11.dcm  12.dcm  13.dcm  14.dcm  15.dcm  16.dcm  17.dcm  18.dcm  19.dcm  2.dcm  20.dcm  21.dcm  22.dcm  23.dcm  24.dcm  25.dcm  26.dcm  27.dcm  28.dcm  29.dcm  3.dcm  30.dcm  31.dcm  32.dcm  33.dcm  34.dcm  35.dcm  36.dcm  37.dcm  38.dcm  39.dcm  4.dcm  40.dcm  41.dcm  42.dcm  43.dcm  44.dcm  45.dcm  (+36 more)
tests/resources/dicom_4d_enhanced/: 1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000000.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000001.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000002.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000003.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000004.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000005.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000006.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000007.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000008.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000009.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000010.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000011.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000012.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000013.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000014.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000015.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000016.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000017.dcm  1.1.1.1.1.1.11111.1.1.1.1111.1111.900000000000000000000000000018.dcm
tests/resources/dicom_enhanced/: DATA_SOURCE.md  slice1.dcm  slice2.dcm  slice3.dcm  slice4.dcm  slice5.dcm  slice6.dcm  slice7.dcm  volume.dcm
tests/resources/dicom_window_level/: 2.dcm
tests/resources/dicom_wsi/full_no_bot/: full_no_bot.dcm
tests/resources/dicom_wsi/full_with_bot/: full_with_bot.dcm
tests/resources/dicom_wsi/non_wsi_dcm/: 1.dcm
tests/resources/dicom_wsi/sparse_no_bot/: sparse_no_bot.dcm
tests/resources/dicom_wsi/sparse_with_bot/: sparse_with_bot.dcm
tests/resources/nrrd/: image10x11x12.nhdr  image10x11x12.nrrd  image10x11x12.raw  image10x11x12_compressed.nhdr  image10x11x12_compressed.nrrd  image10x11x12_unsupported_version.nrrd
tests/resources/oct/: e2e_minimized.E2E  fda_minimized.fda  fds_minimized.fds
tests/resources/segments/: -10_10_Int8.mha  0_10_UInt8.mha  4D_1_1_1_5_UInt8.mha  4D_1_1_1_5_UInt8_threes.mha
